--- a/praktikum 5/Tugas praktikum 5/Tugas pr 5.html
+++ b/praktikum 5/Tugas praktikum 5/Tugas pr 5.html
@@ -23,8 +23,12 @@
         .web img{
             width: 200px;
             height: 200px;
-            margin: 20px;
+            margin: 15px;
             border: 2px solid black;
+            border-radius: 10px;
+        }
+        .web img:hover{
+            border: 5px solid #DD1155;
         }
         footer{
             background-color: #DD1155;
